style(description): замечание Sonar в тесте разделителей
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015awbqkuFMyTddXSsVuoHhc